tests/analysis/good/zerorate.pepa
% Tests whether or not our zero and negative rate detector
% is working.
% Very simple test.
% No error should be produced here since there are 
% no negative *transition* rates.


r1 = 1.0 ;
r2 = 2.0 ;
r3 = 3.0 ;
r4 = 0.0 ;

P1 = (a, r1).P2;
P2 = (a, r2).P3;

P3 = (a, r3 - r2 - r4).P1;


(P1 <> P1) 
