tests/analysis/bad/zerorate.pepa
% Tests whether or not our detector for zero
% and negative rates works.
% Very simple test.
% This *should* raise an error because the rate for the
% transition in the definition of process P3 is zero.

r1 = 1.0;
r2 = 2.0;
r3 = 3.0;

% Note that P1 skips over P2 and goes to P3, which goes back to P1
% hence neither P1 nor P3 perform a run action.
P1 = (start, r1).P3;

%P2 is not defined as it is not used
%P2 = (run, r2).P2;

% This one should raise the error
P3 = (stop, r3 - r2 - r1).P1;

(P1 <> P1) 
